k8s/nas/nas-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nas-route
  namespace: nas
spec:
  parentRefs:
    - name: web-gateway
      namespace: gateway
      sectionName: http
    - name: web-gateway
      namespace: gateway
      sectionName: http-www
    - name: web-gateway
      namespace: gateway
      sectionName: https
    - name: web-gateway
      namespace: gateway
      sectionName: https-www
  hostnames:
    - sonhs.com
    - www.sonhs.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nas-service
          port: 80
